--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "modal",
-    "jquery"
+    "jquery",
+    "jquery plugin"
   ],
   "author": "Abraham Quilca",
   "license": "MIT",
